# WAms

./: .gitignore  PKGBUILD  README.md  estructura.txt  main.py  notification.py  pyproject.toml  wams-0.1-1-any.pkg.tar.zst  web.py
main/: main.py  wams.desktop  wams.install
main/modules/: get_theme.py  i18n.py  notification.py  web.py
main/modules/translations/: en.json  es.json
pkg/wams/: .BUILDINFO  .MTREE  .PKGINFO
pkg/wams/usr/lib/wams/: main.py
pkg/wams/usr/lib/wams/modules/: i18n.py  system_setup.py  web.py
pkg/wams/usr/share/doc/wams/: README.md
src/: i18n.py  main.py  notification.py  web.py
src/translations/: en.json  es.json
src/wams/: get_theme.py  notification.py  web.py
src/wams/translations/: en.json
